ingress-demo.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mydeployment
  labels:
    api: rk
spec:
  replicas: 3
  selector:
    matchLabels:
      app: raj
  template:
    metadata:
      labels: 
        app: raj
    spec:
      containers:
      - name: mycon
        image: 10rajkumar10/my-app:rk1
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: my-service
  labels:
    app: raj
spec:
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
  selector:
    app: raj
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: a51502767bd02488086bc7abe1ba930c-772174986.ap-south-1.elb.amazonaws.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: my-service
            port:
              number: 80
